--- a/styles/layout.css
+++ b/styles/layout.css
@@ -22,9 +22,15 @@ div.card {
 } */
 
 div.tier2 {
-    /* height: 240px; */
-    width: 50%;
+    height: 240px;
+    /* width: 45%; */
+    width: 240px;
     display: inline-block;
+}
+
+div.special {
+    width: 100%;
+    height: 150px;
 }
 
 @media (min-width: 1160px) {
@@ -51,11 +57,18 @@ div.tier2 {
     div.special {
         width: 20%;
         float: left;
-        min-height: 100%;
+        min-height: 600px;
     }
 
     section.innerBox {
         float: right;
+    }
+
+    /* TIER 3 */
+
+    div.tier3 {
+        height: 80px;
+        
     }
 
 }
