--- a/styles/layout.css
+++ b/styles/layout.css
@@ -14,6 +14,7 @@ div.card {
     margin: 1rem 0;
     padding: 2rem;
     text-align: center;
+    margin: .8rem
 }
 
 /* section.wrapper {
@@ -26,12 +27,16 @@ div.tier2 {
     /* width: 45%; */
     width: 240px;
     display: inline-block;
+    margin: .8rem
 }
 
 div.special {
     width: 100%;
     height: 150px;
 }
+
+
+
 
 @media (min-width: 1160px) {
 
@@ -44,20 +49,19 @@ div.special {
         width: 40%;
     }
 
+      /* TIER 2 */
+
     div.tier2 {
         display: inline-block;
         width: 20%;
-    }
-
-    div.tier3 {
-        display: inline-block;
-        width: 80%;
+        margin: 0 auto;
     }
 
     div.special {
         width: 20%;
         float: left;
         min-height: 600px;
+        margin: .8rem;
     }
 
     section.innerBox {
@@ -68,7 +72,12 @@ div.special {
 
     div.tier3 {
         height: 80px;
-        
+
+    }
+
+    div.tier3 {
+        display: inline-block;
+        width: 80%;
     }
 
 }
