--- a/styles/layout.css
+++ b/styles/layout.css
@@ -83,3 +83,93 @@ div {
   line-height: 80px;
   float: left;
 }
+
+
+
+@media only screen and (min-width: 660px) {
+    * {box-sizing: border-box;}
+
+div {
+  text-align: center;
+  font-size: 24px;
+  border: solid red 1px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.wrapper {
+/*   display: grid; */
+/*   grid-template-columns: repeat(5, 1fr); */
+/*   grid-gap: 1px; */
+/*   grid-auto-rows: minmax(100px, auto); */
+  grid-template-rows: repeat(14, 50px);
+  width: 964px;
+  margin: 0 auto;
+}
+
+.a {
+  width: 960px;
+  height: 100px;
+  background-color: grey;
+  line-height: 100px;
+}
+.b { 
+  width: 200px;
+  height: 600px;
+  background-color: grey;
+  line-height: 600px;
+  float: left;
+}
+.c {
+  width: 380px;
+  height: 200px;
+  background-color: grey;
+  line-height: 200px;
+  float: left;
+}
+.d {
+  width: 380px;
+  height: 200px;
+  background-color: grey;
+  line-height: 200px;
+  float: left;
+}
+.e {
+  width: 190px;
+  height: 250px;
+  background-color: grey;
+  line-height: 250px;
+  float: left;
+}
+.f {
+  width: 190px;
+  height: 250px;
+  background-color: grey;
+  line-height: 250px;
+  float: left;
+}
+
+.g {
+   width: 190px;
+  height: 250px;
+  background-color: grey;
+  line-height: 250px;
+  float: left;
+}
+
+.h {
+   width: 190px;
+  height: 250px;
+  background-color: grey;
+  line-height: 250px;
+  float: left;
+}
+
+.i {
+  width: 760px;
+  height: 150px;
+  background-color: grey;
+  line-height: 100px;
+  float: left;
+}
+}
