--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,172 @@
-.deck {
+* {box-sizing: border-box;}
+
+div {
+  text-align: center;
+  font-size: 24px;
+  border: solid black 1px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.wrapper {
+  grid-template-rows: repeat(14, 50px);
+  width: 484px;
+  margin: 0 auto;
+}
+
+.a {
+  width: 480px;
+  height: 75px;
+  background-color: grey;
+  line-height: 75px;
+}
+.b { 
+  width: 480px;
+  height: 150px;
+  background-color: grey;
+  line-height: 150px;
+  float: left;
+}
+.c {
+  width: 480px;
+  height: 125px;
+  background-color: grey;
+  line-height: 125px;
+  float: left;
+}
+.d {
+  width: 480px;
+  height: 125px;
+  background-color: grey;
+  line-height: 125px;
+  float: left;
+}
+.e {
+  width: 240px;
+  height: 250px;
+  background-color: grey;
+  line-height: 240px;
+  float: left;
+}
+.f {
+  width: 240px;
+  height: 250px;
+  background-color: grey;
+  line-height: 240px;
+  float: left;
+}
+
+.g {
+   width: 240px;
+  height: 250px;
+  background-color: grey;
+  line-height: 240px;
+  float: left;
+}
+
+.h {
+   width: 240px;
+  height: 250px;
+  background-color: grey;
+  line-height: 240px;
+  float: left;
+}
+
+.i {
+  width: 480px;
+  height: 80px;
+  background-color: grey;
+  line-height: 80px;
+  float: left;
+}
+
+@media only screen and (min-width: 660px) {
+
+    * {box-sizing: border-box;}
+
+    div {
+    text-align: center;
+    font-size: 24px;
+    border: solid black 1px;
+    margin: 0px;
+    padding: 0px;
+    }
+
+    .wrapper {
+    grid-template-rows: repeat(14, 50px);
+    width: 964px;
+    margin: 0 auto;
+    }
+
+    .a {
+    width: 960px;
+    height: 100px;
+    background-color: grey;
+    line-height: 100px;
+    }
+    .b { 
+    width: 200px;
+    height: 600px;
+    background-color: grey;
+    line-height: 600px;
+    float: left;
+    }
+    .c {
+    width: 380px;
+    height: 200px;
+    background-color: grey;
+    line-height: 200px;
+    float: left;
+    }
+    .d {
+    width: 380px;
+    height: 200px;
+    background-color: grey;
+    line-height: 200px;
+    float: left;
+    }
+    .e {
+    width: 190px;
+    height: 250px;
+    background-color: grey;
+    line-height: 250px;
+    float: left;
+    }
+    .f {
+    width: 190px;
+    height: 250px;
+    background-color: grey;
+    line-height: 250px;
+    float: left;
+    }
+
+    .g {
+    width: 190px;
+    height: 250px;
+    background-color: grey;
+    line-height: 250px;
+    float: left;
+    }
+
+    .h {
+    width: 190px;
+    height: 250px;
+    background-color: grey;
+    line-height: 250px;
+    float: left;
+    }
+
+    .i {
+    width: 760px;
+    height: 150px;
+    background-color: grey;
+    line-height: 100px;
+    float: left;
+    }
+}
+
+
+/* .deck {
     border: 1px solid red;
     margin: 1rem auto;
     width: 90%;
@@ -18,4 +186,4 @@ div.card {
         display: inline-block;
         width: 25%;
     }
-}
+} */
